# SoftwareSystemsLabs

./: CMakeLists.txt  README.md
Lab1/: areaOfRectangle.c  areaOfRectangle.h  main.c
Lab1/Exe1/: a.out  hello.c
Lab1/Exe2/: areaOfRectangle.c  areaOfRectangle.h  main.c
Lab2/Part1/: makefile  newMessage.c  newMessage.h  newMessage.h.h  prog  program1.c
Lab2/Part2/Make_Starter/: areaOfCircle.h  areaOfRectangle.h  areaOfSquare.h  areaProg  area_of_triangle.h  makefile
Lab3/: Q1  Q1.c  lab3.c
Lab4/: part1  part1.c
Lab5/: lecture  lecture.c  lecture2  lecture2.c  part3  part3.c
